// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShortListDropDown modal is visible when merge is required 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (2)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left slide-out"
>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <h1
            className=" Heading Heading__peach-subtitle"
        >
            HUSKELISTE (
            2
            )
        </h1>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
        className="top-bar-dropdown-list--elements"
    >
        <span>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            some title1
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid2"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid2",
                                    "taxonomy_description": "some description2",
                                    "title": "some title2",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid2"
                            onClick={[Function]}
                        >
                            some title2
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description2
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget2
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
        </span>
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list contains more than 3 elements, elements are added to top of list 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (4)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left slide-out"
>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <h1
            className=" Heading Heading__peach-subtitle"
        >
            HUSKELISTE (
            4
            )
        </h1>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
        className="top-bar-dropdown-list--elements"
    >
        <span>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid4"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid4",
                                    "taxonomy_description": "some description4",
                                    "title": "some title4",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid4"
                            onClick={[Function]}
                        >
                            some title4
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description4
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget4
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid3"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid3",
                                    "taxonomy_description": "some description3",
                                    "title": "some title3",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid3"
                            onClick={[Function]}
                        >
                            some title3
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description3
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget3
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid2"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid2",
                                    "taxonomy_description": "some description2",
                                    "title": "some title2",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid2"
                            onClick={[Function]}
                        >
                            some title2
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description2
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget2
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            some title1
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
        </span>
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list contains single element 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (1)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left slide-out"
>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <h1
            className=" Heading Heading__peach-subtitle"
        >
            HUSKELISTE (
            1
            )
        </h1>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
        className="top-bar-dropdown-list--elements"
    >
        <span>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            some title1
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <img
                    alt="luk"
                    className="top-bar-dropdown-list-element--close-btn"
                    onClick={[Function]}
                    src="KrydsGrey.svg"
                />
            </div>
        </span>
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list is empty and merge modal is hidden 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (0)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left slide-out"
>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <h1
            className=" Heading Heading__peach-subtitle"
        >
            HUSKELISTE (
            0
            )
        </h1>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center "
    >
        Din huskeliste er tom
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className=" btn Button Button__tertiary Button__medium"
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;
